#43930 fix alignment of collappsed row in grid

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_rta.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_rta.scss
@@ -111,6 +111,7 @@
 	a {
 		margin-right: 5%;
 	}
+	z-index:999;
 }
 
 .agent-table-wrapper {
